# repertuarr

./: .dockerignore  .gitignore  AGENTS.md  CONTINUITY.md  Dockerfile  main.py  pyproject.toml  release-please-config.json  test_cfg.py  verify_changes.py  verify_interactive.py  verify_prompt.py  verify_user_config.py
.github/workflows/: ci.yml
bot/: __init__.py  add_media.py  admin_clear.py  admin_ui.py  arr_add.py  carousel_feedback_buttons.py  chat_maintenance.py  database.py  download_monitor.py  download_monitor_arr.py  filter_planner.py  inquiry_agent.py  inquiry_tools.py  jellyfin.py  list_extractor.py  llm_logging.py  llm_pricing.py  media_server.py  models.py  plex.py  recommendation_filters.py  recommendation_pool.py  recommendation_prompt.py  service_request.py  session_context.py  telegram_bot.py  telegram_image.py  telegram_notify.py  tmdb.py  translations.py  version.py  webhook.py  webhook_events.py
bot/database/: __init__.py  chat.py  logs.py  recommendations.py  service_logs.py
bot/phrases/: __init__.py  build_lang_yamls.py  catalog.py  keys.py  lang_overlay_data.py  (+2 more)
tests/: test_add_media.py  test_carousel_feedback_buttons.py  test_chat_maintenance.py  test_download_failure_detection.py  test_feedback.py  test_inquiry_agent.py  test_llm_pricing.py  test_media_server_factory.py  test_phrases.py  test_plex.py  test_recent_recommendations.py  test_recommendation_filters.py  test_recommendation_pool.py  test_recommendation_prompt.py  test_service_request.py  test_telegram_image.py  test_telegram_notify.py  test_tmdb_discover.py  test_tmdb_search.py
(+38 files in other folders)
