[project]
name = "homelab-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "jshaptic",email = "eugene.shatilo@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot[job-queue] (>=22.5,<23.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "asyncssh (>=2.22.0,<3.0.0)",
    "openai (>=2.17.0,<3.0.0)",
    "chevron (>=0.14.0,<0.15.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)"
]



[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
